--- a/configurations/reconstruction/demo_kinetics.yaml
+++ b/configurations/reconstruction/demo_kinetics.yaml
@@ -26,4 +26,7 @@ model_args:
 phase: test
 device: [0]
 test_batch_size: 1
+gen_video: True
 res_video_dir: results/reconstruction/kinetics/video
+gen_image: True
+res_image_dir: results/reconstruction/kinetics/image
