--- a/configurations/prediction/jaad/ours/train_noisy.yaml
+++ b/configurations/prediction/jaad/ours/train_noisy.yaml
@@ -1,22 +1,22 @@
-work_dir: ./work_dir/prediction/jaad/ours/noisy
-weights: ./work_dir/reconstruction/jaad/epoch50_model.pt
-ignore_weights: ['fcn']     # ignore last layer of recognition
+work_dir: /home/manhh/work_dir/prediction/jaad/PNet/noisy
+# weights:  /home/manhh/work_dir/reconstruction/jaad/epoch50_model.pt
+# ignore_weights: ['fcn']     # ignore last layer of recognition
 
 # feeder
 feeder: feeder.feeder_prediction_jaad.Feeder
 train_feeder_args:
   obs_len: 10
   pred_len: 10
-  data_path: ../datasets/processed_data/prediction/jaad/train_data_gt.pkl
-  label_path: ../datasets/processed_data/prediction/jaad/train_metadata_gt.pkl
+  data_path: ../datasets/processed_data/prediction/jaad/train_data_noisy.pkl
+  label_path: ../datasets/processed_data/prediction/jaad/train_metadata_noisy.pkl
 test_feeder_args:
   obs_len: 10
   pred_len: 10
-  data_path: ../datasets/processed_data/prediction/jaad/val_data_gt.pkl
-  label_path: ../datasets/processed_data/prediction/jaad/val_metadata_gt.pkl
+  data_path: ../datasets/processed_data/prediction/jaad/val_data_noisy.pkl
+  label_path: ../datasets/processed_data/prediction/jaad/val_metadata_noisy.pkl
 
 # model
-model: net.pst_gcn.Model
+model: net.PNet.PNet
 model_args:
   obs_len: 10
   pred_len: 10
@@ -31,7 +31,7 @@ model_args:
 
 
 # training
-device: [0,2,3]
+device: [0,1,2,3]
 batch_size: 256 
 test_batch_size: 256
 
