--- a/configurations/prediction/jaad/ours/train_gt.yaml
+++ b/configurations/prediction/jaad/ours/train_gt.yaml
@@ -23,6 +23,7 @@ model_args:
   loc_feats: 2
   pose_feats: 3
   gridflow_feats: 24
+  action_feats: 256
   num_keypoints: 18
   edge_importance_weighting: True
   graph_args:
