--- a/configurations/prediction/titan/fpl/train_gt.yaml
+++ b/configurations/prediction/titan/fpl/train_gt.yaml
@@ -1,12 +1,13 @@
 work_dir: ./work_dir/prediction/jaad/tcnn_pose_gridflow/gt
+# weights: ./work_dir/prediction/jaad/tcnn_pose_gridflow/impute/epoch50_model.pt  # load weights from impute model
 
 # feeder
 feeder: feeder.feeder_prediction_jaad.Feeder
 train_feeder_args:
   obs_len: 10
   pred_len: 10
-  data_path: ../datasets/processed_data/prediction/jaad/train_data_impute.pkl
-  label_path: ../datasets/processed_data/prediction/jaad/train_metadata_impute.pkl
+  data_path: ../datasets/processed_data/prediction/jaad/train_data_gt.pkl
+  label_path: ../datasets/processed_data/prediction/jaad/train_metadata_gt.pkl
 test_feeder_args:
   obs_len: 10
   pred_len: 10
