--- a/configurations/reconstruction/test_kinetics.yaml
+++ b/configurations/reconstruction/test_kinetics.yaml
@@ -1,16 +1,16 @@
-weights: ./work_dir/reconstruction/kinetics/epoch50_model.pt
+weights: /home/manhh/work_dir/reconstruction/kinetics/epoch50_model.pt
 
 # feeder
-feeder: feeder.feeder_reconstruction.Feeder
+feeder: feeder.feeder_reconstruction_kinetics.Feeder
 test_feeder_args:
   random_choose: False
   window_size: 10 
   random_noise: True
-  data_path: data/reconstruction/kinetics/val_data.npy
-  label_path: data/reconstruction/kinetics/val_label.pkl
+  data_path: /home/manhh/github/datasets/processed_data/reconstruction/kinetics/val_data.npy
+  label_path: /home/manhh/github/datasets/processed_data/reconstruction/kinetics/val_label.pkl
 
 # model
-model: net.rst_gcn_kinetics.Model
+model: net.RegGenNet.RegGenNet
 model_args:
   in_channels: 3
   num_class: 400
@@ -18,8 +18,6 @@ model_args:
   graph_args:
     layout: 'openpose'
     strategy: 'spatial'
-  window_size: 10
-
 
 # test 
 phase: test
