--- a/configurations/reconstruction/test_kinetics.yaml
+++ b/configurations/reconstruction/test_kinetics.yaml
@@ -1,4 +1,5 @@
 weights: /home/manhh/work_dir/reconstruction/kinetics/epoch50_model.pt
+work_dir: ./work_dir/reconstruction/kinetics/
 
 # feeder
 feeder: feeder.feeder_reconstruction_kinetics.Feeder
@@ -22,4 +23,4 @@ model_args:
 # test 
 phase: test
 device: [0, 1, 2, 3]
-test_batch_size: 64
+test_batch_size: 256
