--- a/configurations/prediction/titan/ours/test_noisy.yaml
+++ b/configurations/prediction/titan/ours/test_noisy.yaml
@@ -1,4 +1,5 @@
-work_dir: ./work_dir/prediction/titan/const_vel/noisy
+work_dir: ./work_dir/prediction/titan/ours/noisy
+weights: /home/manhh/work_dir/prediction/titan/ours/noisy/epoch50_model.pt
 
 # feeder
 feeder: feeder.feeder_prediction_jaad.Feeder
@@ -9,21 +10,25 @@ test_feeder_args:
   label_path: ../datasets/processed_data/prediction/titan/val_metadata_noisy.pkl
 
 # model
-model: net.sota.const_vel.Model
+model: net.PNet.PNet
 model_args:
+  num_class: 10
   obs_len: 10
   pred_len: 10
   loc_feats: 2
   pose_feats: 3
+  gridflow_feats: 24
+  action_feats: 3
   num_keypoints: 18
+  edge_importance_weighting: True
+  graph_args:
+    layout: 'openpose'
+    strategy: 'spatial'
 
-# testing
+# test
 phase: test
-device: [0]
-batch_size: 256 
+device: [0, 1, 2, 3]
 test_batch_size: 256
-
-# make sure to comment out self.load_optimizer()in base_setting.py
 
 
 
